syntax = "proto3";
package com.progetto.grpc;
import "google/protobuf/timestamp.proto";

import 'Order.proto';

message OrderRequest {
  Order order = 1;
}

message OrderResponse {
  google.protobuf.Timestamp arrivalTimestamp = 1;
  uint32 newX = 2;
  uint32 newY = 3;
  double kmRun = 4;
  // metti media misurazioni
  uint32 residualBattery = 6;
}

service OrderService {
  rpc makeDelivery(OrderRequest) returns (OrderResponse);
}